# Civorum

./: .gitignore  Cargo.toml  README.md  biomes.yaml  landmasses.yml  notes.md
.github/workflows/: mdbook.yml
assets/: README.md
assets/models/: deep-water.glb  snow.glb  stone-mountain.glb
book/: book.toml
book/src/: SUMMARY.md  architecture.md  intro.md  landmass_generation.md  map.md
book/src/dev-diary/:  - Hexes and Maps.md  06.10.2025 - Beginnings.md  16.10.25 - Hexes and Maps.md  2025-10-06-beginnings.md  2025-10-16-hexes-and-maps.md  README.md  TEMPLATE.md  terrain-and-assets.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: mod.rs
crates/cli/src/ui/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: debug_render.rs  lib.rs
crates/core/src/game/: mod.rs
crates/core/src/map/: mod.rs
crates/core/src/rules/: mod.rs
crates/core/src/sim/: mod.rs
crates/core/src/util/: mod.rs
crates/map/: Cargo.toml  readme.md
crates/map/src/: gen.rs  hex.rs  lib.rs  map_sizes.rs  parser.rs  terrain.rs  tile.rs
crates/mapgen/: Cargo.toml
crates/mapgen/src/: lib.rs
crates/mapgen/src/map_components/: hex_coords.rs  mod.rs  resources.rs  terrain.rs  tile.rs  yields.rs
crates/mapgen/src/pipeline/: biomes.rs  features.rs  helpers.rs  land.rs  map.rs  map_sizes.rs  map_types.rs  mod.rs
crates/mapgen/src/scripts/: mod.rs
crates/mapgen/src/validators/: mod.rs
scripts/: generate_debug_maps.sh
src/: camera.rs  cli.rs  gui.rs  main.rs  viewer.rs
